After an evaluation, GNOME has moved from Bugzilla to GitLab. Learn more about GitLab.
No new issues can be reported in GNOME Bugzilla anymore.
To report an issue in a GNOME project, go to GNOME GitLab.
Do not go to GNOME Gitlab for: Bluefish, Doxygen, GnuCash, GStreamer, java-gnome, LDTP, NetworkManager, Tomboy.
Bug 712336 - The C renderer-plugin example is not working
The C renderer-plugin example is not working
Status: RESOLVED FIXED
Product: rygel
Classification: Applications
Component: Examples
git master
Other Linux
: Normal minor
: ---
Assigned To: rygel-maint
rygel-maint
Depends on:
Blocks:
 
 
Reported: 2013-11-14 21:32 UTC by Richard Röjfors
Modified: 2013-11-18 19:45 UTC
See Also:
GNOME target: ---
GNOME version: ---


Attachments
Patch solving the issue (4.10 KB, patch)
2013-11-14 21:32 UTC, Richard Röjfors
none Details | Review
Patch with sane indentation (4.11 KB, patch)
2013-11-15 07:49 UTC, Richard Röjfors
committed Details | Review

Description Richard Röjfors 2013-11-14 21:32:00 UTC
Created attachment 259842 [details] [review]
Patch solving the issue

This due to some added properties in the interface, which is not added to the code.

The attached patch adds those properties and just returns 0/FALSE.
Comment 1 Richard Röjfors 2013-11-15 07:49:14 UTC
Created attachment 259858 [details] [review]
Patch with sane indentation
Comment 2 Jens Georg 2013-11-15 21:52:12 UTC
Review of attachment 259858 [details] [review]:

crap, that means abi break :-/ Thanks