examples: Fix C renderer plugin

Add new properties.

https://bugzilla.gnome.org/show_bug.cgi?id=712336